Resolves: tdf#113805 insert special character fails in insert footnote, etc dialog

i.e. since

commit 710a39414569995bd5a8631a948c939dc73bcef9
Date:   Thu May 11 13:27:38 2017 +0530

    GSoC: Glyph View and Recent Characters Control in Special Characters dialog

    Change-Id: Ia55f3fefe7c14327cff2e996ab0038dc52f9b017

it inserts into the document, extend the fix of

commit 4020945651b4f3c636980e2103db440b5c55459c
Author: Daniel <danielfaleirosilva@gmail.com>
Date:   Sun Sep 24 17:55:19 2017 -0300

    tdf#111739 fix Selecting a custom character as a bullet symbol insertion

to do the old thing that existing code depends on if this is not an
"insert" dialog, and bubble that setting around from the callers

Change-Id: Id8acf16955d0167beffae43e3b201e500ee7a929
Reviewed-on: https://gerrit.libreoffice.org/50781
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>