cui/source/dialogs/cuicharmap.cxx
@@ -42,6 +42,7 @@
 #include <sfx2/request.hxx>
 #include <sfx2/sfxsids.hrc>
 #include <sfx2/app.hxx>
+#include <svx/svxids.hrc>
 #include <editeng/editids.hrc>
 #include <editeng/fontitem.hxx>
 #include <strings.hrc>
@@ -632,6 +633,20 @@ void SvxCharacterMap::insertCharToDoc(const OUString& sGlyph)
         comphelper::dispatchCommand(".uno:InsertSymbol", aArgs);
 
         updateRecentCharacterList(sGlyph, aFont.GetFamilyName());
+
+    } else {
+        SfxItemSet* pSet = GetOutputSetImpl();
+        if ( pSet )
+        {
+            sal_Int32 tmp = 0;
+            sal_UCS4 cChar = sGlyph.iterateCodePoints(&tmp);
+            const SfxItemPool* pPool = pSet->GetPool();
+            pSet->Put( SfxStringItem( pPool->GetWhich(SID_CHARMAP), sGlyph ) );
+            pSet->Put( SvxFontItem( aFont.GetFamilyType(), aFont.GetFamilyName(),
+                aFont.GetStyleName(), aFont.GetPitch(), aFont.GetCharSet(), pPool->GetWhich(SID_ATTR_CHAR_FONT) ) );
+            pSet->Put( SfxStringItem( pPool->GetWhich(SID_FONT_NAME), aFont.GetFamilyName() ) );
+            pSet->Put( SfxInt32Item( pPool->GetWhich(SID_ATTR_CHAR), cChar ) );
+        }
     }
 }
 
